<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutmain"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:screenOrientation="portrait" >

    <TextView
        android:id="@+id/tvinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tag_bienv_sis"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.20"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/desc_imagen"
        android:scaleType="fitXY"
        android:src="@drawable/bg3" />

    <Button
        android:id="@+id/btIniciar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/iniciar"
        android:onClick="startLogueoActivity" />

</LinearLayout>
